--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <body>
 <h1>Index Page</h1>
 <p>This is the first paragraph</p>
+
+<h2>Second Section</h2>
+<p>This is the second paragraph</p>
 </body>
 
 </html>
