--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
 <h2>Second Section</h2>
 <p>This is the second paragraph</p>
-</body>
+<a href="http://steampowered.com" title="Yay Steam."></a>
 
+<!-- everything for the user goes above here -->
+</body>
 </html>
