--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 <h2>Second Section</h2>
 <p>This is the second paragraph</p>
-<a href="http://steampowered.com" title="Yay Steam."></a>
+
+<a href="contact_info.html" title="Contact Info Here">Contact Info</a>
 
 <!-- everything for the user goes above here -->
 </body>
