--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <h2>Second Section</h2>
 <p>This is the second paragraph</p>
 
+<a href="songs.html" title="Songs for Listening To">Songs</a>
 <a href="contact_info.html" title="Contact Info Here">Contact Info</a>
 
 <!-- everything for the user goes above here -->
