--- a/contact_info.html
+++ b/contact_info.html
@@ -18,5 +18,7 @@
 <p>This is the second paragraph</p>
 
 <!-- everything for the user goes above here -->
+
+<a href="index.html" title="Back to the Home Page">Back to Home</a>
 </body>
 </html>
