--- a/songs.html
+++ b/songs.html
@@ -1,4 +1,24 @@
 <!doctype html>
 <html>
 
-<!-- songs to go here later -->
+<!-- this is a comment -->
+
+<!-- this is my head block for the browser -->
+<head>
+<!-- title tag shows up on broswer tag -->
+<title>Contact Information</title>
+</head>
+
+<!-- songs and such to go here later -->
+<body>
+<h1>Contact Information</h1>
+<p>This is the first paragraph</p>
+
+<h2>Second Section</h2>
+<p>This is the second paragraph</p>
+
+<!-- everything for the user goes above here -->
+
+<a href="index.html" title="Back to the Home Page">Back to Home</a>
+</body>
+</html>
