--- a/songs.html
+++ b/songs.html
@@ -6,7 +6,7 @@
 <!-- this is my head block for the browser -->
 <head>
 <!-- title tag shows up on broswer tag -->
-<title>Contact Information</title>
+<title>Songs</title>
 </head>
 
 <!-- songs and such to go here later -->
