--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <head>
 <!-- title tag shows up on broswer tag -->
 <title>Index Page</title>
+<link rel="stylesheet" href="./stylish.css">
 </head>
 
 <!-- the body is where everything goes that users should see -->
