--- a/contact_info.html
+++ b/contact_info.html
@@ -7,6 +7,7 @@
 <head>
 <!-- title tag shows up on broswer tag -->
 <title>Contact Information</title>
+<link rel="stylesheet" href="./stylish.css">
 </head>
 
 <!-- contact info to go here later -->
