--- a/songs.html
+++ b/songs.html
@@ -7,6 +7,7 @@
 <head>
 <!-- title tag shows up on broswer tag -->
 <title>Songs</title>
+<link rel="stylesheet" href="./stylish.css">
 </head>
 
 <!-- songs and such to go here later -->
